# gorkycode

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: categories.py  route.py
backend/app/core/: config.py
backend/app/models/: poi.py  schemas.py
backend/app/services/: coffee.py  embedding.py  geocoding.py  llm.py  overpass.py  ranking.py  route_planner.py  routing.py  transit.py  twogis_client.py
backend/migrations/: 001_init.sql
backend/scripts/: adapt_poi_data.py  check_system.py  generate_sample_route.py  load_pois.py  validate_pois.py
backend/tests/: conftest.py  test_api.py  test_geocoding_services.py  test_services.py  test_transit.py
old/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
old/backend/app/api/v1/: __init__.py  router.py
old/backend/app/core/: database.py
old/backend/app/models/: poi.py
old/backend/app/services/: embedding.py  export.py  geocoding.py  ranking.py  routing.py  time_scheduler.py  twogis_client.py
old/backend/scripts/: csv_to_poi_json.py  generate_sample_route.py
old/backend/tests/: __init__.py  test_embedding.py
services/api-gateway/: Dockerfile  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/api/: router.py
services/api-gateway/app/api/endpoints/: categories.py  embedding.py  route.py
services/api-gateway/app/core/: config.py
services/api-gateway/app/domain/route_planning/: coffee.py  constants.py  diversity.py  elevation.py  exceptions.py  explanations.py  geometry.py  intensity.py  metadata.py  models.py  optimization.py  schedule.py  scoring.py  service.py  sharing.py  start_location.py  time_phase.py  weather.py
services/api-gateway/app/grpc/: clients.py
services/api-gateway/app/grpc/proto/: embedding_pb2.py  embedding_pb2_grpc.py  geocoding_pb2.py  geocoding_pb2_grpc.py  llm_pb2.py  llm_pb2_grpc.py  (+6 more)
services/api-gateway/app/models/: schemas.py
services/api-gateway/app/proto/: llm_pb2.pyi  poi_pb2.py  poi_pb2.pyi  ranking_pb2.py  route_pb2.py
services/api-gateway/app/services/: __init__.py  route_workflow.py  share_store.py  time_scheduler.py
services/api-gateway/tests/: test_route_heuristics.py  test_route_optimization.py
services/embedding-service/: Dockerfile  pyproject.toml
services/embedding-service/app/: main.py
services/embedding-service/app/core/: config.py
services/embedding-service/app/proto/: embedding_pb2_grpc.py  llm_pb2.py  llm_pb2_grpc.py  poi_pb2.py  poi_pb2.pyi  poi_pb2_grpc.py  ranking_pb2.py  route_pb2.pyi
services/embedding-service/app/services/: embedding.py
services/gateway/: .dockerignore  Dockerfile  pyproject.toml
services/gateway/app/: main.py
services/gateway/app/core/: config.py
services/gateway/app/grpc_clients/: __init__.py  geocoding_client.py  llm_client.py  ml_client.py  routing_client.py
services/gateway/app/proto/: geocoding_pb2.py  geocoding_pb2.pyi  geocoding_pb2_grpc.py  llm_pb2.py  ml_pb2.py  ml_pb2.pyi  ml_pb2_grpc.py
services/gateway/db/: init.sql
services/geocoding/: Dockerfile  pyproject.toml
services/geocoding-service/: Dockerfile  pyproject.toml
services/geocoding-service/app/: main.py
services/geocoding-service/app/core/: config.py
services/geocoding-service/app/proto/: embedding_pb2.py  ranking_pb2.pyi  route_pb2.py
services/geocoding-service/app/services/: geocoding.py
services/geocoding-service/tests/: conftest.py  test_geocoding_service.py
services/geocoding/app/: server.py
services/geocoding/app/proto/: geocoding_pb2_grpc.py  llm_pb2_grpc.py  ml_pb2_grpc.py
services/llm/: Dockerfile  pyproject.toml
services/llm-service/: Dockerfile  pyproject.toml
services/llm-service/app/: main.py
services/llm-service/app/core/: config.py
services/llm-service/app/proto/: embedding_pb2.pyi  llm_pb2.pyi  poi_pb2.pyi
services/llm-service/app/services/: llm.py
services/llm/app/: server.py
services/llm/app/proto/: routing_pb2.py  routing_pb2.pyi  routing_pb2_grpc.py
services/llm/app/workers/: celery_app.py  tasks.py
services/ml/: .dockerignore  Dockerfile  pyproject.toml
services/ml/app/: server.py
services/ml/app/proto/: geocoding_pb2.py  llm_pb2.py  llm_pb2.pyi
services/poi-service/: Dockerfile  pyproject.toml
services/poi-service/app/: main.py
services/poi-service/app/core/: config.py
services/poi-service/app/models/: poi.py
services/poi-service/app/proto/: embedding_pb2.py  embedding_pb2.pyi  embedding_pb2_grpc.py  geocoding_pb2.py  geocoding_pb2.pyi  llm_pb2.py  poi_pb2.py  ranking_pb2_grpc.py  route_pb2.py  route_pb2.pyi  route_pb2_grpc.py
services/poi-service/app/services/: poi.py
services/poi-service/scripts/: load_pois.py
services/python-common/: pyproject.toml
services/python-common/ai_tourist_common/: __init__.py  grpc.py  health.py  logging.py  tracing.py
services/ranking-service/: Dockerfile  pyproject.toml
services/ranking-service/app/: main.py
services/ranking-service/app/core/: config.py
services/ranking-service/app/models/: poi.py
services/ranking-service/app/proto/: geocoding_pb2_grpc.py  llm_pb2_grpc.py  poi_pb2.pyi  ranking_pb2_grpc.py  route_pb2.pyi
services/ranking-service/app/services/: ranking.py
services/route-planner-service/: Dockerfile  pyproject.toml
services/route-planner-service/app/: __init__.py  main.py
services/route-planner-service/app/core/: config.py
services/route-planner-service/app/proto/: geocoding_pb2.py  poi_pb2_grpc.py  ranking_pb2.pyi  route_pb2_grpc.py
services/route-planner-service/app/services/: route_planner.py  route_planner_engine.py  routing.py  transit.py  twogis_client.py
services/route-planner-service/tests/: conftest.py  test_route_planner_engine.py
services/routing/: Dockerfile  pyproject.toml
services/routing/app/: server.py
services/routing/app/proto/: llm_pb2_grpc.py  ml_pb2.py  routing_pb2.py
(+144 files in other folders)
