[tool.poetry]
name = "aitourist-backend"
version = "0.1.0"
description = "AI-powered tourist guide for Nizhny Novgorod"
authors = ["VisageDvachevsky"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
openai = "^1.10.0"
anthropic = "^0.18.0"
sentence-transformers = "^2.3.1"
numpy = "^1.26.3"
scipy = "^1.12.0"
scikit-learn = "^1.4.0"
httpx = "^0.26.0"
orjson = "^3.9.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.2"
ruff = "^0.1.11"
mypy = "^1.8.0"
ipython = "^8.20.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"