[tool.poetry]
name = "aitourist-backend"
version = "0.1.0"
description = "AI-powered tourist guide for Nizhny Novgorod"
authors = ["VisageDvachevsky <visage@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
redis = "^5.2.0"
openai = "^1.57.0"
anthropic = "^0.42.0"
numpy = "^1.26.0,<2.0"
httpx = "^0.28.0"
orjson = "^3.10.0"
tenacity = "^9.0.0"
pytz = "^2024.1"  

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.2"
ruff = "^0.1.11"
mypy = "^1.8.0"
ipython = "^8.20.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
