[tool.poetry]
name = "api-gateway"
version = "2.0.0"
description = "API Gateway for AI-Tourist microservices"
authors = ["AI-Tourist Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
orjson = "^3.9.0"
prometheus-fastapi-instrumentator = "^6.1.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
opentelemetry-exporter-jaeger = "^1.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"