[tool.poetry]
name = "embedding-service"
version = "2.0.0"
description = "Text embedding generation microservice"
authors = ["AI-Tourist Team"]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
pydantic-settings = "^2.1.0"
prometheus-client = "^0.19.0"
sentence-transformers = "^2.2.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
