[tool.poetry]
name = "gateway"
version = "1.0.0"
description = "API Gateway"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
redis = "^5.2.0"
orjson = "^3.10.0"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
