[tool.poetry]
name = "llm-service"
version = "2.0.0"
description = "LLM-powered route explanation microservice"
authors = ["AI-Tourist Team"]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
pydantic-settings = "^2.1.0"
prometheus-client = "^0.19.0"
openai = "^1.6.0"
anthropic = "^0.8.0"
tenacity = "^8.2.0"
ai-tourist-common = {path = "../python-common", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
