[tool.poetry]
name = "llm-service"
version = "1.0.0"
description = "LLM explanation service"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
protobuf = "^4.25.0"
openai = "^1.10.0"
anthropic = "^0.42.0"
celery = "^5.3.0"
redis = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"