[tool.poetry]
name = "route-planner-service"
version = "2.0.0"
description = "Route planning and optimization microservice"
authors = ["AI-Tourist Team"]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.60.0"
grpcio-tools = "^1.60.0"
pydantic-settings = "^2.1.0"
prometheus-client = "^0.19.0"
geopy = "^2.4.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
